Se agregan metodfos CRUD para Category y DTOs y AutoMapper

--- a/Inventory.WebAPI/Inventory.WebAPI.csproj
+++ b/Inventory.WebAPI/Inventory.WebAPI.csproj
@@ -7,13 +7,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.8">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Inventory.Entities\Inventory.Entities.csproj" />
     <ProjectReference Include="..\Inventory.Persistence\Inventory.Persistence.csproj" />
+    <ProjectReference Include="..\Inventory.DTOs\Inventory.DTOs.csproj" />
   </ItemGroup>
 
 </Project>
