--- a/Inventory.WebAPI/appsettings.json
+++ b/Inventory.WebAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection":"Server=localhost,1433;Database=InventoryDB;User=sa;Password=Password12$;TrustServerCertificate=true"
+  }
 }
